fixed height issue that caused ajax loader image to appear "clipped"

--- a/domains/portfolio.aaronlademann.com/html/wp-content/themes/gridlocked/style.css
+++ b/domains/portfolio.aaronlademann.com/html/wp-content/themes/gridlocked/style.css
@@ -1097,6 +1097,7 @@ label.error { color: red; }
 .single-portfolio .slider, .single-portfolio .slides_container {
 	width: 550px;
 	height: auto;
+	min-height: 300px;
 }
 
 /* pages that only have one image need this */
